// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Posts Should render if isEditing === false 1`] = `
<div
  className="addPostForm"
>
  <div>
    <div
      className="postTitle"
    >
      Add
       New Post
    </div>
    <form>
      <div>
        <label>
          ID:
        </label>
        <input
          disabled={true}
          type="text"
        />
        <br />
        <label>
          Title:
        </label>
         
        <input
          placeholder="Enter Title"
          type="text"
        />
         
        <br />
        <label>
          Description:
        </label>
        <textarea
          placeholder="Description"
          rows="5"
        />
      </div>
      <br />
      <button
        onClick={[MockFunction]}
      >
        Cancel
      </button>
      <button
        onClick={[MockFunction]}
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;

exports[`Add Posts Should render if isVisible === false 1`] = `null`;

exports[`Add Posts Should render isEditing  === true 1`] = `
<div
  className="addPostForm"
>
  <div>
    <div
      className="postTitle"
    >
      Edit
       New Post
    </div>
    <form>
      <div>
        <label>
          ID:
        </label>
        <input
          disabled={true}
          type="text"
          value={2}
        />
        <br />
        <label>
          Title:
        </label>
         
        <input
          placeholder="Enter Title"
          type="text"
          value="test post title"
        />
         
        <br />
        <label>
          Description:
        </label>
        <textarea
          placeholder="Description"
          rows="5"
          value="test post body"
        />
      </div>
      <br />
      <button
        onClick={[MockFunction]}
      >
        Cancel
      </button>
      <button
        onClick={[MockFunction]}
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;
